# tauri-templates

./: .gitignore  LICENSE  README.md  plan.md
base-template/: .gitignore  README.md  components.json  package.json  vite.config.ts
base-template/app/: app.css  root.tsx
base-template/app/components/: mode-toggle.tsx  splash-screen.tsx
base-template/app/lib/: tauri-utils.ts
base-template/app/providers/: theme-provider.tsx
base-template/app/routes/: home.tsx
base-template/src-tauri/: tauri.conf.json
tauri-surrealdb-webcontainer/: README.md  components.json  index.html  package.json  preview.html  vite.config.ts
tauri-surrealdb-webcontainer-wasm/: README.md  components.json  index.html  package.json  preview.html  vite.config.ts
tauri-surrealdb-webcontainer-wasm/src/: main.tsx  router.tsx
tauri-surrealdb-webcontainer-wasm/src-tauri/: Cargo.toml  tauri.conf.json
tauri-surrealdb-webcontainer/src/: index.css  main.tsx  router.tsx
tauri-surrealdb-webcontainer/src-tauri/: Cargo.toml  tauri.conf.json
tauri-surrealdb-webcontainer/src-tauri/capabilities/: default.json
tauri-surrealdb-webcontainer/src-tauri/src/: lib.rs
tauri-surrealdb-webcontainer/src-tauri/src/db/: connection.rs  filesystemtree.rs  mod.rs
tauri-surrealdb-webcontainer/src-tauri/src/secret/: index.rs
tauri-surrealdb-webcontainer/src-tauri/src/ui/: tray.rs
tauri-vite-react-surrealdb/: index.html  package.json  vite.config.ts
tauri-vite-react-surrealdb/src/: index.css  main.tsx  router.tsx
tauri-vite-react-surrealdb/src-tauri/: Cargo.toml  tauri.conf.json
(+36 files in other folders)
