[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Roscoe van der Boom"]
license = "MIT"
repository = "https://github.com/roscoevanderboom/tauri-templates"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }
surrealdb = { version = "3.0.4", features = ["kv-surrealkv", "protocol-ws"] }
surrealdb-types = "3.0.4"
chrono = "0.4.44"
tauri-plugin-process = "2"
